Adding component changes